# sell_me_this_pen

./: .gitignore  .pre-commit-config.yaml  prod_uwsgi.ini  pyproject.toml  run_uwsgi.sh  run_uwsgi_prod.sh
app/: app.py
app/templates/: index.html
cfg/: cfg.yaml
sales_trainer/: app.py  chat.py  config.py  pywsgi.py  trainer.py  trainer_store.py
sales_trainer/static/: app.js
sales_trainer/templates/: index.html
sales_trainer/trainer/: config.py  trainer.py  trainer_store.py
