[tool.poetry]
name = "sales_trainer"
version = "0.1.0"
description = ""
authors = ["Sleptsov Denis <hurrdurrrderp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-socketio = "^5.5.1"
python-socketio = "^5.13.0"
langchain-gigachat = "^0.3.11"
pyyaml = "^6.0.2"
pydantic-settings = "^2.10.1"
gevent = "^25.5.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.0.0"
mypy = "^1.9.0"
bandit = "^1.7.8"
pytest = "^8.1.1"
flake8-pyproject = "^1.2.3"
types-pyyaml = "^6.0.12.20240311"
pre-commit = "^4.2.0"


[tool.poetry.group.lint.dependencies]
types-flask-socketio = "^5.5.0.20250516"
types-gevent = "^25.4.0.20250516"

[tool.bandit]
exclude_dirs = [
    "__pycache__",
    ".mypy_cache",
    ".venv"
]

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".venv"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
